Added Rubik font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,12 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --font-sans: var(--font-rubik-sans);
+  --font-mono: var(--font-rubik-sans);
+  /*
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  */
 }
 
 @media (prefers-color-scheme: dark) {
